--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend mentor challenge for E-commerce product card",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tailwindcss-cli build -i dist/css/style.css -o dist/css/styles.css"
   },
   "author": "Nick Mackenzie",
   "license": "MIT",
